@@ -10,6 +10,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -87,6 +88,6 @@ public class PromotionServiceImpl implements PromotionService {
                         .discount(promotion.getDiscount())
                         .condition(promotion.getCondition())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 }
